--- a/software/gwas_continuous.Rmd
+++ b/software/gwas_continuous.Rmd
@@ -17,7 +17,7 @@ library("ggplot2")
 library("reshape2")
 ```
 
-## R Markdown
+## GWAS for continuous traits
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
@@ -48,9 +48,8 @@ For the moment, our "phenotype" coincides with the breed:
 
 ```{r pressure, echo=FALSE}
 pp <- phdata(df)
-pp$phenotype <- as.factor(pp$phenotype)
-p <- ggplot(pp,aes(x=phenotype)) + geom_bar(aes(fill=phenotype))
-p <- p + facet_wrap(~population) + xlab("phenotype")
+p <- ggplot(pp,aes(x=population, y=phenotype)) + geom_boxplot(aes(fill=population))
+p <- p + xlab("phenotype")
 print(p)
 ```
 
@@ -69,8 +68,15 @@ K[upper.tri(K)] = t(K)[upper.tri(K)]
 heatmap(K,col=rev(heat.colors(75)))
 ```
 
+```{r}
+data2.qt <- qtscore(phenotype, data = df1, trait="gaussian")
+lambda(data2.qt)
+plot(data2.qt, df="Pc1df",col = c("red", "slateblue"),pch = 19, cex = .5, main="trait")
+descriptives.scan(data2.qt,top=100)
+```
+
 ```{r, label='polygenic'}
-h2a <- polygenic(phenotype,data=df1,kin=K,trait.type = "binomial")
+h2a <- polygenic(phenotype,data=df1,kin=K,trait.type = "gaussian")
 df.mm <- mmscore(h2a,df1)
 descriptives.scan(df.mm,top=100)
 plot(df.mm,col = c("red", "slateblue"),pch = 19, cex = .5, main="phenotype")
