--- a/software/gwas.bib
+++ b/software/gwas.bib
@@ -8,3 +8,42 @@
   year={2001},
   publisher={Genetics Soc America}
 }
+@article{aulchenko2007genabel,
+  title={GenABEL: an R library for genome-wide association analysis},
+  author={Aulchenko, Yurii S and Ripke, Stephan and Isaacs, Aaron and Van Duijn, Cornelia M},
+  journal={Bioinformatics},
+  volume={23},
+  number={10},
+  pages={1294--1296},
+  year={2007},
+  publisher={Oxford University Press}
+}
+@article{kijas2016genome,
+  title={Genome-wide association reveals the locus responsible for four-horned ruminant},
+  author={Kijas, James W and Hadfield, Tracy and Naval Sanchez, Marina and Cockett, Noelle},
+  journal={Animal genetics},
+  volume={47},
+  number={2},
+  pages={258--262},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+@article{biscarini2016genome,
+  title={Genome-wide association study for traits related to plant and grain morphology, and root architecture in temperate rice accessions},
+  author={Biscarini, Filippo and Cozzi, Paolo and Casella, Laura and Riccardi, Paolo and Vattari, Alessandra and Orasen, Gabriele and Perrini, Rosaria and Tacconi, Gianni and Tondelli, Alessandro and Biselli, Chiara and others},
+  journal={PLoS One},
+  volume={11},
+  number={5},
+  pages={e0155425},
+  year={2016},
+  publisher={Public Library of Science}
+}
+@article{biffani2014adding,
+  title={Adding evidence for a role of the SLITRK gene family in the pathogenesis of left displacement of the abomasum in Holstein-Friesian dairy cows},
+  author={Biffani, Stefano and Morandi, Nicola and Locatelli, Valentina and Pravettoni, Davide and Boccardo, Antonio and Stella, Alessandra and Nicolazzi, Ezequiel Lu{\'\i}s and Biscarini, Filippo},
+  journal={Livestock Science},
+  volume={167},
+  pages={104--109},
+  year={2014},
+  publisher={Elsevier}
+}
