--- a/software/gwas_models.Rmd
+++ b/software/gwas_models.Rmd
@@ -21,7 +21,7 @@ $$
 
 where $y_{ij}$ is the phenotypic observation for sample *i* with SNP genotype *j*, $SNP_j$ is the effect of SNP genotype *j* (e.g. AA, AB, BB), and $e_{ij}$ are the residuals of the model.
 
-```{r data, echo=FALSE}
+```{r data}
 setwd("~/Dropbox/cursos/berlin2018/data/")
 phenotypes <- read.table("phenotypes_rice.txt", header = TRUE)
 genotypes <- read.table("rice_snp.raw", header = TRUE)
@@ -41,14 +41,14 @@ First, we can model SNP genotypes as the number of copies of the minor allele: 0
 fit <- lm(PH~snp, data = phenotypes)
 ```
 
-```{r, echo=FALSE}
+```{r}
 g <- summary(fit)
 g
 ```
 
 #### ANOVA table
 
-```{r, echo=FALSE}
+```{r}
 kable(anova(fit))
 ```
 
@@ -61,7 +61,7 @@ phenotypes$snp <- as.factor(phenotypes$snp)
 fit <- lm(PH~snp, data = phenotypes)
 ```
 
-```{r, echo=FALSE}
+```{r}
 g <- summary(fit)
 g
 ```
@@ -81,7 +81,7 @@ g <- summary(fit)
 g
 ```
 
-```{r, echo=FALSE}
+```{r}
 anova(fit)
 ```
 
@@ -90,10 +90,15 @@ anova(fit)
 For binary traits (e.g. case/control), the basic model is a simple logistic regression model of the following form:
 
 $$
-y_{ij}=\mu+SNP_j+e_{ij}
+\left\{ 
+\begin{array}{lr}
+P(y_i=1|x_i)=p(x_i) \\
+\text{logit}(p(x_i))=\text{log} \left( \frac{p(x_i)}{1-p(x_i)} \right)=\mu+\sum_{j=1}^m z_{ij} SNP_j
+\end{array}
+\right.
 $$
 
-where $y_{ij}$ is the phenotypic observation for sample *i* with SNP genotype *j*, $SNP_j$ is the effect of SNP genotype *j* (e.g. AA, AB, BB), and $e_{ij}$ are the residuals of the model.
+where $P(y_i=1|x_i)$ is the probability for sample *i* to belong to group "1" given its SNP genotypes *x_i*.
 
 ```{r data_sheep, echo=FALSE}
 setwd("~/Dropbox/cursos/berlin2018/data/")
@@ -107,15 +112,19 @@ names(phenotypes) <- c("id","breed","horns","sex","snp")
 kable(head(phenotypes))
 ```
 
-
-### Modelling number of copies of the minor allele
-
-First, we can model SNP genotypes as the number of copies of the minor allele: 0, 1, 2 (numeric variable)
+Prepare phenotype data:
 
 ```{r}
 phenotypes <- phenotypes[phenotypes$horns!=0,]
 phenotypes$horns <- phenotypes$horns-1
-fit <- glm(horns~snp, data = phenotypes, family="binomial")
+```
+
+### Fit a generalised linear model
+
+We now need to fit a generalised linear model instead of a simple linear regression model: since we are analysing binary data, a common choice is to use the **binomial distribution** and the **logit()** link function: 
+
+```{r}
+fit <- glm(horns~snp, data = phenotypes, family=binomial(link="logit"))
 ```
 
 ```{r, echo=FALSE}
@@ -123,9 +132,17 @@ g <- summary(fit)
 g
 ```
 
-#### ANOVA table
-
 ```{r, echo=FALSE}
-kable(anova(fit))
+full_model <- glm(horns~snp, data = phenotypes, family="binomial")
+reduced_model <- glm(horns~1, data = phenotypes, family="binomial")
+anova(reduced_model, full_model, test = "LRT")
+
+l1 <- logLik(full_model)
+l0 <- logLik(reduced_model)
+df <- length(coef(full_model)) - length(coef(reduced_model)) 
+
+teststat<--2*(as.numeric(l0)-as.numeric(l1))
+pchisq(teststat,df=1,lower.tail=FALSE)
 ```
+
 
